# cpymake

./: .gitignore  .pylintrc  README.md  README.rst  clean.bat  make.bat  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  python-testing.yml
cemake/: cemake_build_ext.py  cemake_extension.py
cpymake/: __init__.py  cemake_build_ext.py  cemake_extension.py  cpymake_build_ext.py  cpymake_extension.py  extension.py
cpymake/command/: build_ext.py
docs/: conf.py  index.rst
docs/modules/cemake/: cemake.rst
src/cemake/: __init__.py  cemake_build_ext.py  cemake_extension.py
