[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cemake"
version = "0.1.0"
readme = "README.rst"
description = "Allows building of CMake defined Python Extension modules"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "James Calo", email = "jamesafcalo@gmail.com"},
]

classifiers = [
  #"Programming Language :: Python :: 3.6",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Framework :: Setuptools Plugin",
  "Topic :: System :: Installation/Setup",
]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/SagaraBattousai/CEMake.git"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.entry-points."distutils.commands"]
cemake = "cemake.cemake_build_ext:CeMakeBuildExt"

[tool.black]
preview = true
